--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -3,5 +3,8 @@ layout: post
 title: Data Analysis and Visualization Exercise 1
 image: /img/hello_world.jpeg
 ---
+```
+cc <- seq(1,12, by = 1)
+names(cc) <- letters[cc]
 
-
+```
