--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -4,7 +4,28 @@ title: Data Analysis and Visualization Exercise 1
 image: /img/hello_world.jpeg
 ---
 ```
+aa <- (1:10)
 cc <- seq(1,12, by = 1)
 names(cc) <- letters[cc]
+names(aa) <- letters[aa]
 
+myList <- (aa,cc)
+> myList
+[[1]]
+ a  b  c  d  e  f  g  h  i  j 
+ 1  2  3  4  5  6  7  8  9 10 
+
+[[2]]
+ a  b  c  d  e  f  g  h  i  j  k  l 
+ 1  2  3  4  5  6  7  8  9 10 11 12 
+
+> attributes(a)
+$names
+ [1] "a" "b" "c" "d" "e" "f" "g" "h" "i" "j"
+
+> attributes(myList[1])
+NULL
+> attributes(myList[[1]])
+$names
+ [1] "a" "b" "c" "d" "e" "f" "g" "h" "i" "j"
 ```
