--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -3,6 +3,7 @@ layout: post
 title: Data Analysis and Visualization Exercise 1
 image: /img/hello_world.jpeg
 ---
+##names, attributes and list
 ```
 aa <- (1:10)
 cc <- seq(1,12, by = 1)
@@ -29,3 +30,6 @@ NULL
 $names
  [1] "a" "b" "c" "d" "e" "f" "g" "h" "i" "j"
 ```
+## Q: difference between vector and factor
+
+factor is a vector that only can contain predefined values. It is used to store categorical data. It has **levels** Like for height there are high, medium and low. Then the levels are 1,2,3 which can be ordered or unordered (genders)
