--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -3,7 +3,7 @@ layout: post
 title: Data Analysis and Visualization Exercise 1
 image: /img/hello_world.jpeg
 ---
-##names, attributes and list
+### names, attributes and list
 ```
 aa <- (1:10)
 cc <- seq(1,12, by = 1)
@@ -31,11 +31,11 @@ $names
  [1] "a" "b" "c" "d" "e" "f" "g" "h" "i" "j"
 
 ```
-## Q: difference between vector and factor
+### Q: difference between vector and factor
 
 factor is a vector that only can contain predefined values. It is used to store categorical data. It has **levels** Like for height there are high, medium and low. Then the levels are 1,2,3 which can be ordered or unordered (genders)
 
-## gl (generate levels)
+### gl (generate levels)
 
 ```
 x <- gl(n = 3, k = 10, labels =c('Rita', 'Lord', 'Rito'))
@@ -45,7 +45,7 @@ x <- gl(n = 3, k = 10, labels =c('Rita', 'Lord', 'Rito'))
 ```
 if we replace the second element, it doesn't work. As we  can only use one of the **predefined** labels.
 
-## rev (reverse)
+### rev (reverse)
 
 ```
 f1 <- factor(letters)
@@ -71,7 +71,7 @@ Levels: z y x w v u t s r q p o n m l k j i h g f e d c b a
 rev(f3) #reversing f3 will give f1
 
 ```
-## matrices
+### matrices
 
 create a 3*4 matrix that contains 1 to 12 and conver it into a dataframe.
 ```
