--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -2,6 +2,7 @@
 layout: post
 title: Data Analysis and Visualization Exercise 1
 image: /img/hello_world.jpeg
+tags: [R]
 ---
 ### names, attributes and list
 ```
@@ -55,13 +56,14 @@ levels(f1) <- rev(levels(f1))
 Levels: z y x w v u t s r q p o n m l k j i h g f e d c b a
 
 ```
+..
 ```
 f2 <- rev(factor(letters))
 > f2
  [1] z y x w v u t s r q p o n m l k j i h g f e d c b a
 Levels: a b c d e f g h i j k l m n o p q r s t u v w x y z
 ```
-
+..
 ```
 f3 <- factor(letters, levels = rev(letters))
 > f3
@@ -135,9 +137,9 @@ compute the columns' **correlation** using the _spearman_ method. Then, plot the
 > m <-m-n
 > M <- cor(m,method = 'spearman')
 ```
+..
 ```
 install.packages("corrplot")
 library("corrplot")
 corrplot(M,method = 'number')
 ```
- ![](/img/corrplot.png) 
