--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -143,3 +143,74 @@ install.packages("corrplot")
 library("corrplot")
 corrplot(M,method = 'number')
 ```
+### data.frame
+take a list  to coerce it to a data.frame. Keep in mind : the lengths of the elements should be same.
+if not, we need to fix that by inserting NAs.
+```
+df <- as.data.frame(myList)
+names(df) <- LETTERS[1:3] # add column names
+> df
+   A  B  C
+a  1  1  1
+b  2  2  2
+c  3  3  3
+d  4  4  4
+e  5  5  5
+f  6  6  6
+g  7  7  7
+h  8  8  8
+i  9  9  9
+j 10 10 10
+k NA 11 11
+  NA NA 12
+```
+create a data.frame with 26 rows like below. 
+```
+> head(df)
+  V1 V2 V3
+1  1  4  a
+2  2  8  a
+3  3 12  c
+4  4 16  c
+5  5 20  e
+6  6 24  e
+> tail(df)
+   V1  V2 V3
+21 21  84  u
+22 22  88  u
+23 23  92  w
+24 24  96  w
+25 25 100  y
+26 26 104  y
+
+aa <- seq(1,26)
+bb <- seq(4,104, by = 4)
+cc <- rep(seq(1,26,2),each =2 )
+> cc
+ [1]  1  1  3  3  5  5  7  7  9  9 11 11 13 13 15 15 17 17 19 19 21 21 23 23 25
+[26] 25
+
+df <- data.frame(V1= aa, V2 = bb, V3 = letters[cc])
+```
+change the row names and column names of data.frame to capital letters.
+<span style="color:blue">some *This is Blue italic.* text</span>
+```
+> attributes(df2)
+$names
+[1] "V1" "V2" "V3"
+
+$class
+[1] "data.frame"
+
+$row.names
+ [1]  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
+[26] 26
+
+attr(df2,'names') <- letters[1:3]
+attr(df2,'row.names') <- LETTERS[1:26]
+
+# Or through accessor functions
+
+names(df2) <-
+rownames(df2) <-
+```
