--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -193,7 +193,6 @@ cc <- rep(seq(1,26,2),each =2 )
 df <- data.frame(V1= aa, V2 = bb, V3 = letters[cc])
 ```
 change the row names and column names of data.frame to capital letters.
-<span style="color:blue">some *This is Blue italic.* text</span>
 ```
 > attributes(df2)
 $names
@@ -214,3 +213,4 @@ attr(df2,'row.names') <- LETTERS[1:26]
 names(df2) <-
 rownames(df2) <-
 ```
+<span style="color:Crimson">change the attributes $class to list.</span>
