--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -213,4 +213,4 @@ attr(df2,'row.names') <- LETTERS[1:26]
 names(df2) <-
 rownames(df2) <-
 ```
-<span style="color:Crimson">change the attributes $class to list.</span>
+<span style="color:Crimson">change the attributes ```class``` to list.</span>
