--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -214,3 +214,11 @@ names(df2) <-
 rownames(df2) <-
 ```
 <span style="color:Crimson">change the attributes ```class``` to list.</span>
+you can see taht data.frame is a class which is build on list. Whereas list itself is **not** a class.
+class is a generic mechanisum for a simple OO style of programming in R.
+## Combining data.frames
+```
+df[, 1] <- NULL # first column to NULL
+dd <- rev(rep(seq(1,26,2), each = 2))
+ee <- seq(0, 1, 1.6, length.out = 26) # <span style="color:Crimson">seq(from, to, by= )</span>
+```
