--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -217,8 +217,8 @@ rownames(df2) <-
 you can see taht data.frame is a class which is build on list. Whereas list itself is **not** a class.
 class is a generic mechanisum for a simple OO style of programming in R.
 ## Combining data.frames
-```
+```javascript
 df[, 1] <- NULL # first column to NULL
 dd <- rev(rep(seq(1,26,2), each = 2))
-ee <- seq(0, 1, 1.6, length.out = 26) # <span style="color:Crimson">seq(from, to, by= )</span>
+ee <- seq(0, 1, 1.6, length.out = 26) # seq(from, to, by= )
 ```
