--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -216,9 +216,51 @@ rownames(df2) <-
 <span style="color:Crimson">change the attributes ```class``` to list.</span>
 you can see taht data.frame is a class which is build on list. Whereas list itself is **not** a class.
 class is a generic mechanisum for a simple OO style of programming in R.
-## Combining data.frames
+## Operations on data.frames
+### cbind()
 ```javascript
-df[, 1] <- NULL # first column to NULL
+df[, 1] <- NULL # delete the first column
 dd <- rev(rep(seq(1,26,2), each = 2))
 ee <- seq(0, 1, 1.6, length.out = 26) # seq(from, to, by= )
+df2 <- data.frame(V4 = dd, V5 = ee)
+df_df2 <- cbind(df2,df)
+
 ```
+### system.time()
+```javascript
+df <- as.data.frame(matrix(runif(9e6),3e3, 3e3))
+```
+This will create 3000 cols and rows and a total of 9 million values.
+Now compute the sum of any col and row, measure the time for both.
+We can see the time for col is less than row.
+Why? Because ```str(df[,1]) #col``` is a list, while ```str(df[1,]) #row```is a data.frame.
+## Subsetting
+```javascript
+> x<- data.frame(matrix(1:12,3,4))
+> x
+  X1 X2 X3 X4
+1  1  4  7 10
+2  2  5  8 11
+3  3  6  9 12
+```
+1. select the elements on the second row and the second and fourth columns.
+```javascript
+x[2,c(2,4)]
+```
+2. set the rownames to 'row1' to 'row3' and colnames to 'col1' to 'col4'
+```javascript
+rownames(x) <- paste0('row', 1:3)
+colnames(x) <- paste0('col', 1:4)
+```
+3. set col3 and col4 all value to 0.
+```javascript
+x[,paste0('col',3:4)] <- 0
+```
+4. select the third and fifth elements by different methods.
+```javascript
+> x <- c('a'=1,'b'=2,'c'=3,'d'=4,'e'=5)
+> x
+a b c d e 
+1 2 3 4 5 
+```
+They are the same ```x[c(3,5)]```, ```x[-c(1,2,4)]```, ```x[c(F, F, T, F, T)]```, ```x[c('c','e')]```.
