--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Data Analysis and Visualization Exercise 1
+title: R Exercise 1
 image: /img/hello_world.jpeg
 tags: [R]
 ---
 ### names, attributes and list
-```
+```r
 aa <- (1:10)
 cc <- seq(1,12, by = 1)
 names(cc) <- letters[cc]
@@ -38,7 +38,7 @@ factor is a vector that only can contain predefined values. It is used to store 
 
 ### gl (generate levels)
 
-```
+```r
 x <- gl(n = 3, k = 10, labels =c('Rita', 'Lord', 'Rito'))
 > levels(x)
 [1] "Rita" "Lord" "Rito"
@@ -48,7 +48,7 @@ if we replace the second element, it doesn't work. As we  can only use one of th
 
 ### rev (reverse)
 
-```
+```r
 f1 <- factor(letters)
 levels(f1) <- rev(levels(f1))
 > f1
@@ -57,14 +57,14 @@ Levels: z y x w v u t s r q p o n m l k j i h g f e d c b a
 
 ```
 ..
-```
+```r
 f2 <- rev(factor(letters))
 > f2
  [1] z y x w v u t s r q p o n m l k j i h g f e d c b a
 Levels: a b c d e f g h i j k l m n o p q r s t u v w x y z
 ```
 ..
-```
+```r
 f3 <- factor(letters, levels = rev(letters))
 > f3
  [1] a b c d e f g h i j k l m n o p q r s t u v w x y z
@@ -76,7 +76,7 @@ rev(f3) #reversing f3 will give f1
 ### matrices
 
 create a 3*4 matrix that contains 1 to 12 and conver it into a dataframe.
-```
+```r
 x <- matrix(1:12, 3, 4)
 
 x <- as.data.frame(x)
@@ -87,7 +87,7 @@ x <- as.data.frame(x)
 3  3  6  9 12
 ```
 create a 10 by 5 matrix, name the rows and columns.
-```
+```r
 m <- matrix(1:50, ncol=5)
 rownames(m) <-paste0('row_', 1:nrow(m))
 colnames(m) <-paste0('col_', 1:ncol(m))
@@ -112,11 +112,11 @@ col_1 col_2 col_3 col_4 col_5
    55   155   255   355   455 
 ```
 add vector as another **row**
-```
+```r
 m <- rbind(m,seq(60,100,10))
 ```
 generate another matrix with the same dimensions, containing random numbers between 1 and 100.
-```
+```r
 n <- matrix(sample(1:100,length(m),replace =T), ncol = ncol(m))
 > n
       [,1] [,2] [,3] [,4] [,5]
@@ -133,12 +133,12 @@ n <- matrix(sample(1:100,length(m),replace =T), ncol = ncol(m))
 ```
 subtract this matrix n from the matrix m.
 compute the columns' **correlation** using the _spearman_ method. Then, plot the resulting correlation matrix.
-```
+```r
 > m <-m-n
 > M <- cor(m,method = 'spearman')
 ```
 ..
-```
+```r
 install.packages("corrplot")
 library("corrplot")
 corrplot(M,method = 'number')
@@ -146,7 +146,7 @@ corrplot(M,method = 'number')
 ### data.frame
 take a list  to coerce it to a data.frame. Keep in mind : the lengths of the elements should be same.
 if not, we need to fix that by inserting NAs.
-```
+```r
 df <- as.data.frame(myList)
 names(df) <- LETTERS[1:3] # add column names
 > df
@@ -165,7 +165,7 @@ k NA 11 11
   NA NA 12
 ```
 create a data.frame with 26 rows like below. 
-```
+```r
 > head(df)
   V1 V2 V3
 1  1  4  a
@@ -193,7 +193,7 @@ cc <- rep(seq(1,26,2),each =2 )
 df <- data.frame(V1= aa, V2 = bb, V3 = letters[cc])
 ```
 change the row names and column names of data.frame to capital letters.
-```
+```r
 > attributes(df2)
 $names
 [1] "V1" "V2" "V3"
@@ -213,12 +213,12 @@ attr(df2,'row.names') <- LETTERS[1:26]
 names(df2) <-
 rownames(df2) <-
 ```
-<span style="color:Crimson">change the attributes ```class``` to list.</span>
-you can see taht data.frame is a class which is build on list. Whereas list itself is **not** a class.
+<span style="color:Crimson">change the attributes ```class``` to list.</span> &nbsp
+you can see that data.frame is a class which is build on list. Whereas list itself is **not** a class.
 class is a generic mechanisum for a simple OO style of programming in R.
 ## Operations on data.frames
 ### cbind()
-```javascript
+```r
 df[, 1] <- NULL # delete the first column
 dd <- rev(rep(seq(1,26,2), each = 2))
 ee <- seq(0, 1, 1.6, length.out = 26) # seq(from, to, by= )
@@ -227,7 +227,7 @@ df_df2 <- cbind(df2,df)
 
 ```
 ### system.time()
-```javascript
+```r
 df <- as.data.frame(matrix(runif(9e6),3e3, 3e3))
 ```
 This will create 3000 cols and rows and a total of 9 million values.
@@ -235,7 +235,7 @@ Now compute the sum of any col and row, measure the time for both.
 We can see the time for col is less than row.
 Why? Because ```str(df[,1]) #col``` is a list, while ```str(df[1,]) #row```is a data.frame.
 ## Subsetting
-```javascript
+```r
 > x<- data.frame(matrix(1:12,3,4))
 > x
   X1 X2 X3 X4
@@ -244,23 +244,192 @@ Why? Because ```str(df[,1]) #col``` is a list, while ```str(df[1,]) #row```is a 
 3  3  6  9 12
 ```
 1. select the elements on the second row and the second and fourth columns.
-```javascript
+```r
 x[2,c(2,4)]
 ```
 2. set the rownames to 'row1' to 'row3' and colnames to 'col1' to 'col4'
-```javascript
+```r
 rownames(x) <- paste0('row', 1:3)
 colnames(x) <- paste0('col', 1:4)
 ```
 3. set col3 and col4 all value to 0.
-```javascript
+```r
 x[,paste0('col',3:4)] <- 0
 ```
 4. select the third and fifth elements by different methods.
-```javascript
+```r
 > x <- c('a'=1,'b'=2,'c'=3,'d'=4,'e'=5)
 > x
 a b c d e 
 1 2 3 4 5 
 ```
 They are the same ```x[c(3,5)]```, ```x[-c(1,2,4)]```, ```x[c(F, F, T, F, T)]```, ```x[c('c','e')]```.
+### outer
+```r
+> vals <- outer(1:5,1:5, FUN ='*')
+> vals
+     [,1] [,2] [,3] [,4] [,5]
+[1,]    1    2    3    4    5
+[2,]    2    4    6    8   10
+[3,]    3    6    9   12   15
+[4,]    4    8   12   16   20
+[5,]    5   10   15   20   25
+> vals[2,5]
+[1] 10
+> vals[c(2,5)]
+[1] 2 5
+```
+When I subset matrix with a vector, the **2d matrix is a vector**. so ```vals[c(2,5)]``` returns the elements at indices 2 and 5 in **column-major** order.
+### Q: Assume ```x <-matrix(1:20, ncol = 2) ```. Difference between ```x[1, , drop = T]```, ```x[1, , drop = F] ```?
+_A: drop = T is simiplified to a vector. 
+```r
+y <- as.data.frame(x)
+> y[,1]  #simplified the output and returns a vector
+ [1]  1  2  3  4  5  6  7  8  9 10
+> y[[1]] #simplified the output and returns a vector
+ [1]  1  2  3  4  5  6  7  8  9 10
+> y[1]   #preserves the input data structure and returns a dataframe with one column.
+   V1
+1   1
+2   2
+3   3
+4   4
+5   5
+6   6
+7   7
+8   8
+9   9
+10 10
+```
+### lookup()
+```r
+lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),
+                     desc = c('cloudy', 'rainy', 'sunny', 'snowy', 'windy'),
+                     gooodForSki = c(T, F, T, F, F)
+                     )
+
+> lookup
+  averageT   desc gooodForSki
+1        5 cloudy        TRUE
+2        7  rainy       FALSE
+3       10  sunny        TRUE
+4        0  snowy       FALSE
+5        3  windy       FALSE
+
+rownames(lookup) <- lookup$desc
+> lookup
+       averageT   desc gooodForSki
+cloudy        5 cloudy        TRUE
+rainy         7  rainy       FALSE
+sunny        10  sunny        TRUE
+snowy         0  snowy       FALSE
+windy         3  windy       FALSE
+
+weeklyCast <- c('rainy', 'rainy', 'cloudy', 'windy', 'snowy', 'cloudy', 'sunny')
+
+lookup[weeklyCast,]
+> lookup[weeklyCast,]
+         averageT   desc gooodForSki
+rainy           7  rainy       FALSE
+rainy.1         7  rainy       FALSE
+cloudy          5 cloudy        TRUE
+windy           3  windy       FALSE
+snowy           0  snowy       FALSE
+cloudy.1        5 cloudy        TRUE
+sunny          10  sunny        TRUE
+
+```
+### match()
+```r
+match(x, table, nomatch = NA_integer_, incomparables = NULL)
+> id <- match(weeklyCast, lookup$desc)
+> id
+[1] 2 2 1 5 4 1 3
+> lookup[id,]
+         averageT   desc gooodForSki
+rainy           7  rainy       FALSE
+rainy.1         7  rainy       FALSE
+cloudy          5 cloudy        TRUE
+windy           3  windy       FALSE
+snowy           0  snowy       FALSE
+cloudy.1        5 cloudy        TRUE
+sunny          10  sunny        TRUE
+```
+### order()
+```r
+> x <- c(5:1, 6:8, 12:9)
+> x
+ [1]  5  4  3  2  1  6  7  8 12 11 10  9
+> y <- (x - 5)^2
+> y
+ [1]  0  1  4  9 16  1  4  9 49 36 25 16
+> o <- order(x)
+> o
+ [1]  5  4  3  2  1  6  7  8 12 11 10  9
+> rbind(x[o], y[o])
+     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12]
+[1,]    1    2    3    4    5    6    7    8    9    10    11    12
+[2,]   16    9    4    1    0    1    4    9   16    25    36    49
+```
+### select columns 
+```r
+bigDF <- as.data.frame(matrix(0, ncol =1500, nrow =1500))
+colnames(bigDF) <- paste0('col_',1:ncol(bigDF))
+```
+1. select the **even** numbered columns
+```r
+s <- seq(1,1500,2)
+selected <- paste0('col_',a)
+a <- bigDF[selectedCols]
+```
+2. select the columns other than column 76 using```setdiff()```
+```r
+b <- bigDF[setdiff(names(bigDF)),'col_76']
+```
+3. assign the number 1 to 500 randomly selected diagonal indices.
+```r
+randSample <- sample(1:1500, 500)
+bigDF[cbind(randSample,randSample)] <- 1
+```
+**retrieve** ```which()``` the row and column indices of the elements which haven been assigned a 1. Select the row where columns col_1 or col_2 are 1 using the ```subset()```
+```r
+c <- which(bigDF == 1 , arr.ind = T)
+d <- subset(bigDF, col_1 ==1 || col_2 ==1)
+d[,1:10]
+> head(airquality)
+  Ozone Solar.R Wind Temp Month Day
+1    41     190  7.4   67     5   1
+2    36     118  8.0   72     5   2
+3    12     149 12.6   74     5   3
+4    18     313 11.5   62     5   4
+5    NA      NA 14.3   56     5   5
+6    28      NA 14.9   66     5   6
+> subset(airquality, Day == 1, select = -Temp)
+    Ozone Solar.R Wind Month Day
+1      41     190  7.4     5   1
+32     NA     286  8.6     6   1
+62    135     269  4.1     7   1
+93     39      83  6.9     8   1
+124    96     167  6.9     9   1
+> subset(airquality, Temp > 80 & Ozone>120, select = c(Ozone, Temp))
+    Ozone Temp
+62    135   84
+99    122   89
+117   168   81
+```
+### Titanic (Pattern Matching and Replacement:```grepl```)
+
+```r
+tab <- read.csv("extdata/titanic.csv") #loading data
+tab$isfemale <- grepl('Mrs|Miss', tab$name)
+sum(tab$isfemale)
+> tab[tab$survived==1,'isfemale']
+[1]  TRUE FALSE FALSE  TRUE  TRUE  TRUE FALSE  TRUE FALSE  TRUE
+ [11]  TRUE FALSE  TRUE FALSE  TRUE  TRUE FALSE  TRUE  TRUE FALSE
+ [21] FALSE  TRUE  TRUE  TRUE  TRUE FALSE  TRUE  TRUE  TRUE  TRUE
+ [31] FALSE  TRUE FALSE  TRUE FALSE  TRUE FALSE  TRUE  TRUE  TRUE
+ [41]  TRUE FALSE  TRUE  TRUE  TRUE FALSE  TRUE  TRUE  TRUE  TRUE
+ ...
+> sum(tab[tab$survived==1,'isfemale'])
+[1] 333
+ ```
