--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -281,7 +281,7 @@ They are the same ```x[c(3,5)]```, ```x[-c(1,2,4)]```, ```x[c(F, F, T, F, T)]```
 ```
 When I subset matrix with a vector, the **2d matrix is a vector**. so ```vals[c(2,5)]``` returns the elements at indices 2 and 5 in **column-major** order.
 ### Q: Assume ```x <-matrix(1:20, ncol = 2) ```. Difference between ```x[1, , drop = T]```, ```x[1, , drop = F] ```?
-_A: drop = T is simiplified to a vector. 
+_A: drop = T is simiplified to a vector._ 
 ```r
 y <- as.data.frame(x)
 > y[,1]  #simplified the output and returns a vector
@@ -303,11 +303,7 @@ y <- as.data.frame(x)
 ```
 ### lookup()
 ```r
-lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),
-                     desc = c('cloudy', 'rainy', 'sunny', 'snowy', 'windy'),
-                     gooodForSki = c(T, F, T, F, F)
-                     )
-
+lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),desc = c('cloudy', 'rainy', 'sunny', 'snowy', 'windy'),gooodForSki = c(T, F, T, F, F))
 > lookup
   averageT   desc gooodForSki
 1        5 cloudy        TRUE
@@ -315,7 +311,6 @@ lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),
 3       10  sunny        TRUE
 4        0  snowy       FALSE
 5        3  windy       FALSE
-
 rownames(lookup) <- lookup$desc
 > lookup
        averageT   desc gooodForSki
@@ -337,7 +332,6 @@ windy           3  windy       FALSE
 snowy           0  snowy       FALSE
 cloudy.1        5 cloudy        TRUE
 sunny          10  sunny        TRUE
-
 ```
 ### match()
 ```r
