--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: R Exercise 1
-image: /img/hello_world.jpeg
+image: /img/cactus.jpg.gif
 tags: [R]
 ---
+[Rstudio cheatsheet](https://rstudio.com/resources/cheatsheets/)
 ### names, attributes and list
 ```r
 aa <- (1:10)
