--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: R Exercise 1
-image: /img/cactus.jpg.gif
+image: /paranormaldistribution.png
 tags: [R]
 ---
 [Rstudio cheatsheet](https://rstudio.com/resources/cheatsheets/)
@@ -307,7 +307,7 @@ y <- as.data.frame(x)
 lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),desc = c('cloudy', 'rainy', 'sunny', 'snowy', 'windy'),gooodForSki = c(T, F, T, F, F))
 ```
 ```r
-> lookup
+lookup
   averageT   desc gooodForSki
 1        5 cloudy        TRUE
 2        7  rainy       FALSE
@@ -336,6 +336,7 @@ snowy           0  snowy       FALSE
 cloudy.1        5 cloudy        TRUE
 sunny          10  sunny        TRUE
 ```
+
 ### match()
 ```r
 match(x, table, nomatch = NA_integer_, incomparables = NULL)
