--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: R Exercise 1
-image: /paranormaldistribution.png
+image: /img/paranormaldistribution.png
 tags: [R]
 ---
 [Rstudio cheatsheet](https://rstudio.com/resources/cheatsheets/)
@@ -306,14 +306,7 @@ y <- as.data.frame(x)
 ```r
 lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),desc = c('cloudy', 'rainy', 'sunny', 'snowy', 'windy'),gooodForSki = c(T, F, T, F, F))
 ```
-.
-```
-  averageT   desc gooodForSki
-1        5 cloudy        TRUE
-2        7  rainy       FALSE
-3       10  sunny        TRUE
-4        0  snowy       FALSE
-5        3  windy       FALSE
+```r
 rownames(lookup) <- lookup$desc
 > lookup
        averageT   desc gooodForSki
