--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: R Exercise 1
-image: img/paranormaldistribution.png
+image: img/hello_world.jpeg
 tags: [R]
 ---
 [Rstudio cheatsheet](https://rstudio.com/resources/cheatsheets/)
@@ -305,9 +305,11 @@ y <- as.data.frame(x)
 ### lookup()
 ```r
 lookup <- data.frame(averageT = c(5, 7, 10, 0 ,3),desc = c('cloudy', 'rainy', 'sunny', 'snowy', 'windy'),gooodForSki = c(T, F, T, F, F))
-
+```
+```r
 rownames(lookup) <- lookup$desc
-> lookup
+```
+```r
        averageT   desc gooodForSki
 cloudy        5 cloudy        TRUE
 rainy         7  rainy       FALSE
@@ -316,9 +318,10 @@ snowy         0  snowy       FALSE
 windy         3  windy       FALSE
 
 weeklyCast <- c('rainy', 'rainy', 'cloudy', 'windy', 'snowy', 'cloudy', 'sunny')
-
+```
+```
 lookup[weeklyCast,]
-> lookup[weeklyCast,]
+lookup[weeklyCast,]
          averageT   desc gooodForSki
 rainy           7  rainy       FALSE
 rainy.1         7  rainy       FALSE
