--- a/_posts/2019-10-31-R1.md
+++ b/_posts/2019-10-31-R1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: R Exercise 1
-image: img/hello_world.jpeg
+image: img/pandoras_box.jpeg
 tags: [R]
 ---
 [Rstudio cheatsheet](https://rstudio.com/resources/cheatsheets/)
