--- a/_posts/2019-11-01-R2.md
+++ b/_posts/2019-11-01-R2.md
@@ -5,7 +5,10 @@ title: R Exercise 2
 tags: [R]
 ---
 
-### Excel, data.table
+### Excel, data.table, subset
+select the athlete who won most bronze medals.
+
+1. using ```table()```
 ```r
 library(readxl)
 oly_df <- read_excel(oly_file_path, sheet= 'ALL MEDALISTS')
@@ -19,3 +22,70 @@ bronze_counts <- table(subset(oly_dt, Medal =="Bronze", 'Athlete'))
            VAN ALMSICK, Franziska               BUSCHSCHULTE, Antje DE JONG, Adrianus Egbertus Willem 
                                 6                                 5                                 5 
 bronze_athl <- bronze_counts[bronze_counts == max(bronze_counts)]
+```
+view their record
+```r
+subset(oly_df,Athlete %in% names(bronze_athl), c('Athlete','Edition','Sport','Event'))
+```
+2.using ```aggregate()```
+```r
+bronze.l <- as.data.table(aggregate(bronze,by = list(bronze$Athlete),FUN = length))
+```
+3. using ```dcast()```
+```r
+ox <- dcast(oly_dt, Athlete ~ Medal)
+oxx <- subset(ox, Bronze == max(Bronze))
+```
+4. using ```.N``` from data.table.
+```r
+bronze[,N := .N, by = Athlete]
+bronze[N == max(N),unique(Athlete)]
+```
+### unique
+```r 
+unique(oly_df$Gender)> unique(oly_df$Gender)
+[1] "Men"   "Women"
+subset(oly_df,Gender =='Men' & Event_gender =='W')
+```
+Q: 
+which country won most medals?
+which country has the hightest ratio of silver medals?
+```r
+nation_medal_df <- read_excel(oly_file_path, sheet= 'COUNTRY TOTALS', range = 'A147:F286')
+> head(nation_medal_df)
+# A tibble: 6 x 6
+  NOC         Country        Bronze  Gold Silver `Grand Total`
+  <chr>       <chr>           <dbl> <dbl>  <dbl>         <dbl>
+1 Grand Total NA               9689  9850   9677         29216
+2 USA         United States    1052  2088   1195          4335
+3 URS         Soviet Union      584   838    627          2049
+4 GBR         United Kingdom    505   498    591          1594
+5 FRA         France            475   378    461          1314
+6 GER         Germany           454   407    350          1211
+```
+remove NA row
+```r
+nation_medal_df <- subset(nation_medal_df, !is.na(Country))
+subset(nation_medal_df, 'Grand Total' == max('Grand Total'))
+nation_medal_df[,'silver_ratio'] <- with(nation_medal_df,Silver/`Grand Total`)
+subset(nation_medal_df,silver_ratio==max(silver_ratio, na.rm =T))
+> subset(nation_medal_df,silver_ratio==max(silver_ratio, na.rm =T))
+# A tibble: 13 x 7
+   NOC   Country             Bronze  Gold Silver `Grand Total` silver_ratio
+   <chr> <chr>                <dbl> <dbl>  <dbl>         <dbl>        <dbl>
+ 1 PAR   Paraguay                NA    NA     17            17            1
+ 2 SCG   Serbia                  NA    NA     14            14            1
+ 3 NAM   Namibia                 NA    NA      4             4            1
+ 4 SIN   Singapore               NA    NA      4             4            1
+ 5 SRI   Sri Lanka               NA    NA      2             2            1
+ 6 TAN   Tanzania                NA    NA      2             2            1
+ 7 VIE   Vietnam                 NA    NA      2             2            1
+ 8 AHO   Netherlands Antill…     NA    NA      1             1            1
+ 9 CIV   Cote d'Ivoire           NA    NA      1             1            1
+10 ISV   Virgin Islands*         NA    NA      1             1            1
+11 SEN   Senegal                 NA    NA      1             1            1
+12 SUD   Sudan                   NA    NA      1             1            1
+13 TGA   Tonga                   NA    NA      1             1            1
+```
+Q:
+which countries did participate, but without winning medals?
