--- a/_posts/2019-11-01-R2.md
+++ b/_posts/2019-11-01-R2.md
@@ -5,7 +5,8 @@ title: R Exercise 2
 tags: [R]
 ---
 
-### Excel, data.table, subset
+### Excel, 
+##data.table, subset
 select the athlete who won most bronze medals.
 
 1. using ```table()```
@@ -48,6 +49,7 @@ unique(oly_df$Gender)> unique(oly_df$Gender)
 [1] "Men"   "Women"
 subset(oly_df,Gender =='Men' & Event_gender =='W')
 ```
+
 ###Q: 
 which country won most medals?
 which country has the hightest ratio of silver medals?
@@ -89,5 +91,34 @@ subset(nation_medal_df,silver_ratio==max(silver_ratio, na.rm =T))
 12 SUD   Sudan                   NA    NA      1             1            1
 13 TGA   Tonga                   NA    NA      1             1            1
 ```
-Q:
-which countries did participate, but without winning medals?
+###Q:
+which countries did participate, but without winning medals? ```setdiff()```
+```r
+participants <- read_excel(oly_file_path,sheet='',range='')
+no_medals <- setdiff(participants$'colname', nation_medal_df$'colname')
+```
+print all countrynames
+```r
+c(subset(participants, colname %in% no_medals, "Country" ))
+```
+
+##SQL
+connect to SQLite data base, inspect the database put together a SQL statement ot retrieve a table that lists for all customers all the products that they ordered.
+excute the statement using ```dbGetQuery()```.
+display the first 5 rows.
+```r
+library(RSQLite)
+drv <- dbDriver('SQLite')
+con <- dbConnect(drv, dbname='extdata/Northwind.sl3')
+tab <- dbGetQuery(con, 'select customers.companyname, customers.contactname, customers.city, products.productname from customers inner join orders on customers.customerid = orders.customerid inner join `order details` on orders.orderid = `order details`.orderid inner join products on `order details`.productid =products.productid')
+> tab[1:5,]
+                CompanyName   ContactName       City                   ProductName
+1 Vins et alcools Chevalier  Paul Henriot      Reims                Queso Cabrales
+2 Vins et alcools Chevalier  Paul Henriot      Reims Singaporean Hokkien Fried Mee
+3 Vins et alcools Chevalier  Paul Henriot      Reims        Mozzarella di Giovanni
+4     Toms Spezialit\xe4ten Karin Josephs M\xfcnster                          Tofu
+5     Toms Spezialit\xe4ten Karin Josephs M\xfcnster         Manjimup Dried Apples
+>nrow(tab)
+[1] 2155
+```
+###
