--- a/_posts/2019-11-01-R2.md
+++ b/_posts/2019-11-01-R2.md
@@ -121,4 +121,30 @@ tab <- dbGetQuery(con, 'select customers.companyname, customers.contactname, cus
 >nrow(tab)
 [1] 2155
 ```
-###
+###XML
+load the XML. Use XPath and DOM functions to find out all unique element names.
+```r
+doc = xmlTreeParse('extdata/plant_catalog.xml',useInternal = TRUE)
+```
+get all plants of zone 4 and transform the data into R list.```xmlTolist```
+```r
+plant_list = xpathApply(doc,'//PLANT[ZONE = 4]',xmlToList)
+> plant_list[[1]]
+$COMMON
+[1] "Bloodroot"
+
+$BOTANICAL
+[1] "Sanguinaria canadensis"
+
+$ZONE
+[1] "4"
+
+$LIGHT
+[1] "Mostly Shady"
+
+$PRICE
+[1] "$2.44"
+
+$AVAILABILITY
+[1] "031599"
+```
