--- a/_posts/2019-11-01-R2.md
+++ b/_posts/2019-11-01-R2.md
@@ -148,3 +148,20 @@ $PRICE
 $AVAILABILITY
 [1] "031599"
 ```
+###HTML
+```r
+url <- 'https://www.skysports.com/premier-league-table'
+> tables <- readHTMLTable(getURL(url))
+table <- tables[[1]]
+> head(table)
+  #            Team Pl W D L  F  A GD Pts Last 6
+1 1       Liverpool 10 9 1 0 23  8 15  28       
+2 2 Manchester City 10 7 1 2 32  9 23  22       
+3 3  Leicester City 10 6 2 2 25  8 17  20       
+4 4         Chelsea 10 6 2 2 23 16  7  20       
+5 5         Arsenal 10 4 4 2 15 14  1  16       
+6 6  Crystal Palace 10 4 3 3 10 12 -2  15       
+> table[1,'Team']
+[1] Liverpool
+20 Levels: Arsenal Aston Villa Bournemouth Brighton and Hove Albion Burnley Chelsea ... Wolverhampton Wanderers
+```
