--- a/_posts/2019-11-01-R2.2.md
+++ b/_posts/2019-11-01-R2.2.md
@@ -5,8 +5,8 @@ title: R Exercise 2.2
 tags: [R]
 ---
 
-### Excel, 
-##data.table, subset
+### Excel
+## data.table, subset
 select the athlete who won most bronze medals.
 
 1. using ```table()```
@@ -121,7 +121,7 @@ tab <- dbGetQuery(con, 'select customers.companyname, customers.contactname, cus
 >nrow(tab)
 [1] 2155
 ```
-###XML
+### XML
 load the XML. Use XPath and DOM functions to find out all unique element names.
 ```r
 doc = xmlTreeParse('extdata/plant_catalog.xml',useInternal = TRUE)
@@ -148,7 +148,7 @@ $PRICE
 $AVAILABILITY
 [1] "031599"
 ```
-###HTML
+### HTML
 ```r
 url <- 'https://www.skysports.com/premier-league-table'
 > tables <- readHTMLTable(getURL(url))
