--- a/_posts/2019-11-02-R2.1.md
+++ b/_posts/2019-11-02-R2.1.md
@@ -5,7 +5,7 @@ title: R Exercise 2.1
 tags: [R]
 ---
 
-###function
+### function
 
 ```r
 codes <- c(rep('a',3), 'c', rep('b',3), 'c', rep('a',3))
@@ -18,3 +18,20 @@ code2weather <- function(code){
 }
 ```
 ## Apply
+Q: Difference betwwen ```sapply``` and ```lapply```?
+A: lapply returns list; sapply returns vector.
+```r
+m <- matrix((1:10),nrow=5,ncol=6)
+> m
+     [,1] [,2] [,3] [,4] [,5] [,6]
+[1,]    1    6    1    6    1    6
+[2,]    2    7    2    7    2    7
+[3,]    3    8    3    8    3    8
+[4,]    4    9    4    9    4    9
+[5,]    5   10    5   10    5   10
+a_m1 <- apply(m,1,sum) #row sum
+> a_m1
+[1] 21 27 33 39 45
+a_m2 <- apply(m,2,sum)#col sum
+> a_m2
+[1] 15 40 15 40 15 40
