--- a/_posts/2019-11-02-R2.1.md
+++ b/_posts/2019-11-02-R2.1.md
@@ -20,6 +20,7 @@ code2weather <- function(code){
 ## Apply
 Q: Difference betwwen ```sapply``` and ```lapply```?
 A: lapply returns list; sapply returns vector.
+
 ```r
 m <- matrix((1:10),nrow=5,ncol=6)
 > m
@@ -35,3 +36,18 @@ a_m1 <- apply(m,1,sum) #row sum
 a_m2 <- apply(m,2,sum)#col sum
 > a_m2
 [1] 15 40 15 40 15 40
+> sapply(codes,code2weather)
+     a      a      a      c      b      b      b      c      a      a      a 
+ "sun"  "sun"  "sun" "wind" "rain" "rain" "rain" "wind"  "sun"  "sun"  "sun" 
+
+```
+### recap subsetting (lookup)
+```r
+lookup <- c(a ='sun', b='rain', c='wind', u=NA)
+conditions3 <-lookup[codes]
+> conditions3
+     a      a      a      c      b      b      b      c      a      a      a 
+ "sun"  "sun"  "sun" "wind" "rain" "rain" "rain" "wind"  "sun"  "sun"  "sun" 
+ ```
+### text manipulation: substr, strsplit and paste
+
