--- a/_posts/2019-11-02-R2.1.md
+++ b/_posts/2019-11-02-R2.1.md
@@ -50,4 +50,70 @@ conditions3 <-lookup[codes]
  "sun"  "sun"  "sun" "wind" "rain" "rain" "rain" "wind"  "sun"  "sun"  "sun" 
  ```
 ### text manipulation: substr, strsplit and paste
+use ```substr``` to remove the prefix from each element. You will need ```sapply``` or a similar loop function to do it.
+next, use ```strsplit``` to split each element into its component strings(adipose-subcu..)
+```r
+> substr(rep("abcdef", 4), 1:4, 4:5) #1:4 is start; 4:5 is end.
+[1] "abcd" "bcde" "cd"   "de" 
+nth <- paste0(1:12, c("st", "nd", "rd", rep("th", 9))) 
+> nth # paste works the same, but separates each input with a space.
+ [1] "1st"  "2nd"  "3rd"  "4th"  "5th"  "6th"  "7th"  "8th"  "9th"  "10th"
+[11] "11th" "12th"
 
+tissues <- c('gtex-adipose-subsculk','gtex-adipose-subsereasdc', 'gtex-adipose-sudcsas', 'gtex-artery-aorta','gtex-artery-coronary')
+res <- sapply(tissues, function(s) substr(s,6,nchar(s)))
+> res
+   gtex-adipose-subsculk gtex-adipose-subsereasdc 
+      "adipose-subsculk"    "adipose-subsereasdc" 
+    gtex-adipose-sudcsas        gtex-artery-aorta 
+       "adipose-sudcsas"           "artery-aorta" 
+    gtex-artery-coronary 
+       "artery-coronary" 
+res2 <- sapply(res,function(s) strsplit(s,'-'))
+res3 <- sapply(res2,function(s) paste(s[1],s[2]))
+unname(res3)
+> unname(res3)
+[1] "adipose subsculk"    "adipose subsereasdc" "adipose sudcsas"    
+[4] "artery aorta"        "artery coronary"   
+> res3
+   gtex-adipose-subsculk gtex-adipose-subsereasdc     gtex-adipose-sudcsas 
+      "adipose subsculk"    "adipose subsereasdc"        "adipose sudcsas" 
+       gtex-artery-aorta     gtex-artery-coronary 
+          "artery aorta"        "artery coronary"
+```
+### regular expressions
+use ```grep```,```gsub```to find out "artery" and their indexes
+```r
+> grep('artery',tissues)
+[1] 4 5
+
+> gsub('gtex-','',tissues)
+[1] "adipose-subsculk"    "adipose-subsereasdc" "adipose-sudcsas"    
+[4] "artery-aorta"        "artery-coronary"
+
+```
+### gene
+Each gene is specified by a string starting with chrXX where XX is an integer from 1-22 indicating the chromosome where the gene is located followed by the start and end locations of the gene.
+Use ```regexpr``` to find the valid genes and ```which``` to find the indexes of these genes.
+```r
+genes <-c("chr22:104594542-104594771","chr10:104660350-104661656",
+          "10:104835843-104836027","chr10:104836728-104849978")
+m <- regexpr('^(chr[0-9]{1,2})',genes)
+> m
+[1]  1  1 -1  1
+attr(,"match.length")
+[1]  5  5 -1  5
+attr(,"index.type")
+[1] "chars"
+attr(,"useBytes")
+[1] TRUE
+> which(m==1)
+[1] 1 2 4
+# extract the chromosomes
+chr <- regmatches(genes, m)
+> chr
+[1] "chr22" "chr10" "chr10"
+# or combine them all in one line
+> chr <- as.integer(substr(regmatches(genes,m),4,5)) #4 is start, 5 is end
+> chr
+[1] 10 10 10
