--- a/_posts/2019-11-02-R2.1.md
+++ b/_posts/2019-11-02-R2.1.md
@@ -17,7 +17,7 @@ code2weather <- function(code){
   else if(code =='u'){return(NA)}
 }
 ```
-## Apply
+### apply
 Q: Difference betwwen ```sapply``` and ```lapply```?
 A: lapply returns list; sapply returns vector.
 
@@ -95,6 +95,7 @@ use ```grep```,```gsub```to find out "artery" and their indexes
 ### gene
 Each gene is specified by a string starting with chrXX where XX is an integer from 1-22 indicating the chromosome where the gene is located followed by the start and end locations of the gene.
 Use ```regexpr``` to find the valid genes and ```which``` to find the indexes of these genes.
+
 ```r
 genes <-c("chr22:104594542-104594771","chr10:104660350-104661656",
           "10:104835843-104836027","chr10:104836728-104849978")
@@ -117,3 +118,4 @@ chr <- regmatches(genes, m)
 > chr <- as.integer(substr(regmatches(genes,m),4,5)) #4 is start, 5 is end
 > chr
 [1] 10 10 10
+```
