--- a/_posts/2019-11-05-R.Rmd
+++ b/_posts/2019-11-05-R.Rmd
@@ -1,6 +1,8 @@
 ---
-title: "firstMD"
-output: pdf_document
+layout: post
+title: R 
+image: pandoras_box.jpeg
+tags: [R]
 ---
 
 ```{r setup, include=FALSE}
